# haku

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  LICENSES.md  MODELS.md  Makefile  NOTES.md  README.md  glossary.md  haku  pyproject.toml
engine/: chunk.py  embed.py  generate_corpus.py  haku.py  manifest.json  requirements-dev.txt  requirements.txt  storage.py  test_chunk.py  test_cli.py  test_embed.py  test_hybrid.py  test_index.py  test_rerank.py  test_search.py  test_storage.py  test_tokenizer.py  tokenizer.py
engine/fixtures/: en_doc.md  es_doc.md
engine/fixtures/corpus/: code.py  mojibake.docx  notas_es.md  notes.md  page.html  readme.txt  report.docx
